--- a/wiki/bg/Mouse_navigation.html
+++ b/wiki/bg/Mouse_navigation.html
@@ -32,11 +32,8 @@
 <h2><span id=".D0.9E.D0.B1.D1.89_.D0.BF.D1.80.D0.B5.D0.B3.D0.BB.D0.B5.D0.B4"></span><span class="mw-headline" id="&#1054;&#1073;&#1097;_&#1087;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076;">&#1054;&#1073;&#1097; &#1087;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076;</span></h2>
 <p><b>&#1053;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103;&#1090;&#1072; &#1089; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072;</b> &#1074;&#1098;&#1074; FreeCAD  &#1089;&#1077; &#1089;&#1098;&#1089;&#1090;&#1086;&#1080; &#1086;&#1090; &#1082;&#1086;&#1084;&#1072;&#1085;&#1076;&#1080;&#1090;&#1077;, &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1085;&#1080; &#1079;&#1072; &#1074;&#1080;&#1079;&#1091;&#1072;&#1083;&#1085;&#1086; &#1085;&#1072;&#1074;&#1080;&#1075;&#1080;&#1088;&#1072;&#1085;&#1077; &#1074; 3D &#1087;&#1088;&#1086;&#1089;&#1090;&#1088;&#1072;&#1085;&#1089;&#1090;&#1074;&#1086;&#1090;&#1086; &#1080; &#1074;&#1079;&#1072;&#1080;&#1084;&#1086;&#1076;&#1077;&#1081;&#1089;&#1090;&#1074;&#1080;&#1077; &#1089; &#1087;&#1086;&#1082;&#1072;&#1079;&#1072;&#1085;&#1080;&#1090;&#1077; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;. FreeCAD &#1087;&#1086;&#1076;&#1076;&#1098;&#1088;&#1078;&#1072; &#1084;&#1085;&#1086;&#1078;&#1077;&#1089;&#1090;&#1074;&#1086; &#1089;&#1090;&#1080;&#1083;&#1086;&#1074;&#1077; &#1085;&#1072; &#1085;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1085;&#1072; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072;. &#1057;&#1090;&#1080;&#1083;&#1098;&#1090; &#1085;&#1072; &#1085;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1087;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077; &#1089;&#1077; &#1085;&#1072;&#1088;&#1080;&#1095;&#1072; <a href="#CAD_navigation">CAD Navigation</a> &#1080; &#1077; &#1084;&#1085;&#1086;&#1075;&#1086; &#1087;&#1088;&#1086;&#1089;&#1090; &#1080; &#1087;&#1088;&#1072;&#1082;&#1090;&#1080;&#1095;&#1077;&#1085;, &#1085;&#1086; FreeCAD &#1089;&#1098;&#1097;&#1086; &#1090;&#1072;&#1082;&#1072; &#1087;&#1088;&#1077;&#1076;&#1086;&#1089;&#1090;&#1072;&#1074;&#1103; &#1085;&#1103;&#1082;&#1086;&#1083;&#1082;&#1086; &#1072;&#1083;&#1090;&#1077;&#1088;&#1085;&#1072;&#1090;&#1080;&#1074;&#1085;&#1080; &#1089;&#1090;&#1080;&#1083;&#1072; &#1085;&#1072; &#1085;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103;, &#1086;&#1090; &#1082;&#1086;&#1080;&#1090;&#1086; &#1076;&#1072; &#1080;&#1079;&#1073;&#1080;&#1088;&#1072;&#1090;&#1077;. &#1048;&#1079;&#1073;&#1088;&#1072;&#1085;&#1080;&#1103;&#1090; &#1089;&#1090;&#1080;&#1083; &#1089;&#1077; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072; &#1079;&#1072; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1084;&#1072;&#1089;&#1080;.
 </p><p>&#1047;&#1072; &#1087;&#1086;&#1074;&#1077;&#1095;&#1077; &#1080;&#1085;&#1092;&#1086;&#1088;&#1084;&#1072;&#1094;&#1080;&#1103; &#1086;&#1090;&#1085;&#1086;&#1089;&#1085;&#1086; &#1089;&#1077;&#1083;&#1077;&#1082;&#1090;&#1080;&#1088;&#1072;&#1085;&#1077;&#1090;&#1086; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1074;&#1080;&#1078;&#1090;&#1077; <a href="../Selection_methods.html" title="Selection methods">Selection methods</a>.
+</p><p>&#1047;&#1072; &#1087;&#1086;&#1074;&#1077;&#1095;&#1077; &#1080;&#1085;&#1092;&#1086;&#1088;&#1084;&#1072;&#1094;&#1080;&#1103; &#1086;&#1090;&#1085;&#1086;&#1089;&#1085;&#1086; &#1084;&#1072;&#1085;&#1080;&#1087;&#1091;&#1083;&#1080;&#1088;&#1072;&#1085;&#1077;&#1090;&#1086; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1074;&#1080;&#1078;&#1090;&#1077; <a href="../Std_TransformManip.html" title="Std TransformManip">Std TransformManip</a>.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>For more information about manipulating objects see <a href="../Std_TransformManip.html" title="Std TransformManip">Std TransformManip</a>.
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Selecting_a_navigation_style">Selecting a navigation style</span></h2>
 </div>
@@ -1232,13 +1229,13 @@ In <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112171054
+Cached time: 20260112171134
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.311 seconds
-Real time usage: 0.367 seconds
-Preprocessor visited node count: 1458/1000000
+CPU time usage: 0.336 seconds
+Real time usage: 0.494 seconds
+Preprocessor visited node count: 1457/1000000
 Post&#8208;expand include size: 80408/2097152 bytes
 Template argument size: 19462/2097152 bytes
 Highest expansion depth: 7/100
@@ -1248,19 +1245,19 @@ Unstrip post&#8208;expand size: 3861/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   64.765      1 -total
- 15.11%    9.788      8 Template:ASCII
-  9.36%    6.065      1 Template:Userdocnavi/bg
-  7.17%    4.642     77 Template:KEY
-  5.37%    3.475      1 Template:CAD_Navigation
-  5.16%    3.344      1 Template:Blender_Navigation/bg
-  4.85%    3.141      1 Template:OpenSCAD_Navigation
-  4.73%    3.061      1 Template:CAD_Navigation/bg
-  4.47%    2.898      1 Template:Navigation_menu_2
-  4.05%    2.621      1 Template:Touchpad_Navigation/bg
+100.00%   66.243      1 -total
+ 19.59%   12.975      8 Template:ASCII
+  8.85%    5.864      1 Template:Userdocnavi/bg
+  5.93%    3.928     77 Template:KEY
+  4.83%    3.197      1 Template:SolidWorks_Navigation
+  4.53%    3.002      1 Template:OpenSCAD_Navigation
+  4.43%    2.932      1 Template:CAD_Navigation/bg
+  4.34%    2.877      1 Template:Blender_Navigation/bg
+  4.32%    2.863      1 Template:Navigation_menu_2
+  4.03%    2.667      1 Template:Touchpad_Navigation/bg
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77587-0!canonical and timestamp 20260112171054 and revision id 1737574. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77587-0!canonical and timestamp 20260112171134 and revision id 1737576. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
