--- a/wiki/bg/Mouse_navigation.html
+++ b/wiki/bg/Mouse_navigation.html
@@ -33,10 +33,9 @@
 <p><b>&#1053;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103;&#1090;&#1072; &#1089; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072;</b> &#1074;&#1098;&#1074; FreeCAD  &#1089;&#1077; &#1089;&#1098;&#1089;&#1090;&#1086;&#1080; &#1086;&#1090; &#1082;&#1086;&#1084;&#1072;&#1085;&#1076;&#1080;&#1090;&#1077;, &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1085;&#1080; &#1079;&#1072; &#1074;&#1080;&#1079;&#1091;&#1072;&#1083;&#1085;&#1086; &#1085;&#1072;&#1074;&#1080;&#1075;&#1080;&#1088;&#1072;&#1085;&#1077; &#1074; 3D &#1087;&#1088;&#1086;&#1089;&#1090;&#1088;&#1072;&#1085;&#1089;&#1090;&#1074;&#1086;&#1090;&#1086; &#1080; &#1074;&#1079;&#1072;&#1080;&#1084;&#1086;&#1076;&#1077;&#1081;&#1089;&#1090;&#1074;&#1080;&#1077; &#1089; &#1087;&#1086;&#1082;&#1072;&#1079;&#1072;&#1085;&#1080;&#1090;&#1077; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;. FreeCAD &#1087;&#1086;&#1076;&#1076;&#1098;&#1088;&#1078;&#1072; &#1084;&#1085;&#1086;&#1078;&#1077;&#1089;&#1090;&#1074;&#1086; &#1089;&#1090;&#1080;&#1083;&#1086;&#1074;&#1077; &#1085;&#1072; &#1085;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1085;&#1072; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072;. &#1057;&#1090;&#1080;&#1083;&#1098;&#1090; &#1085;&#1072; &#1085;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1087;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077; &#1089;&#1077; &#1085;&#1072;&#1088;&#1080;&#1095;&#1072; <a href="#CAD_navigation">CAD Navigation</a> &#1080; &#1077; &#1084;&#1085;&#1086;&#1075;&#1086; &#1087;&#1088;&#1086;&#1089;&#1090; &#1080; &#1087;&#1088;&#1072;&#1082;&#1090;&#1080;&#1095;&#1077;&#1085;, &#1085;&#1086; FreeCAD &#1089;&#1098;&#1097;&#1086; &#1090;&#1072;&#1082;&#1072; &#1087;&#1088;&#1077;&#1076;&#1086;&#1089;&#1090;&#1072;&#1074;&#1103; &#1085;&#1103;&#1082;&#1086;&#1083;&#1082;&#1086; &#1072;&#1083;&#1090;&#1077;&#1088;&#1085;&#1072;&#1090;&#1080;&#1074;&#1085;&#1080; &#1089;&#1090;&#1080;&#1083;&#1072; &#1085;&#1072; &#1085;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103;, &#1086;&#1090; &#1082;&#1086;&#1080;&#1090;&#1086; &#1076;&#1072; &#1080;&#1079;&#1073;&#1080;&#1088;&#1072;&#1090;&#1077;. &#1048;&#1079;&#1073;&#1088;&#1072;&#1085;&#1080;&#1103;&#1090; &#1089;&#1090;&#1080;&#1083; &#1089;&#1077; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072; &#1079;&#1072; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1084;&#1072;&#1089;&#1080;.
 </p><p>&#1047;&#1072; &#1087;&#1086;&#1074;&#1077;&#1095;&#1077; &#1080;&#1085;&#1092;&#1086;&#1088;&#1084;&#1072;&#1094;&#1080;&#1103; &#1086;&#1090;&#1085;&#1086;&#1089;&#1085;&#1086; &#1089;&#1077;&#1083;&#1077;&#1082;&#1090;&#1080;&#1088;&#1072;&#1085;&#1077;&#1090;&#1086; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1074;&#1080;&#1078;&#1090;&#1077; <a href="../Selection_methods.html" title="Selection methods">Selection methods</a>.
 </p><p>&#1047;&#1072; &#1087;&#1086;&#1074;&#1077;&#1095;&#1077; &#1080;&#1085;&#1092;&#1086;&#1088;&#1084;&#1072;&#1094;&#1080;&#1103; &#1086;&#1090;&#1085;&#1086;&#1089;&#1085;&#1086; &#1084;&#1072;&#1085;&#1080;&#1087;&#1091;&#1083;&#1080;&#1088;&#1072;&#1085;&#1077;&#1090;&#1086; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1074;&#1080;&#1078;&#1090;&#1077; <a href="../Std_TransformManip.html" title="Std TransformManip">Std TransformManip</a>.
+</p><p><span id="Selecting_a_navigation_style"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Selecting_a_navigation_style">Selecting a navigation style</span></h2>
-</div>
+<h2><span id=".D0.98.D0.B7.D0.B1.D0.B8.D1.80.D0.B0.D0.BD.D0.B5_.D0.BD.D0.B0_.D1.81.D1.82.D0.B8.D0.BB_.D0.B7.D0.B0_.D0.BD.D0.B0.D0.B2.D0.B8.D0.B3.D0.B0.D1.86.D0.B8.D1.8F"></span><span class="mw-headline" id="&#1048;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;_&#1085;&#1072;_&#1089;&#1090;&#1080;&#1083;_&#1079;&#1072;_&#1085;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103;">&#1048;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1089;&#1090;&#1080;&#1083; &#1079;&#1072; &#1085;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103;</span></h2>
 <div class="mw-translate-fuzzy">
 <ul><li>&#1042; &#1084;&#1077;&#1085;&#1102;&#1090;&#1086; <a href="../bg/Preferences_Editor.html" title="Preferences Editor/bg">Preference Editor</a>, &#1089;&#1082;&#1077;&#1094;&#1080;&#1103;&#1090;&#1072; Display &#1080; &#1074; &#1090;&#1072;&#1073;&#1072;  <i>3D View</i>;</li>
 <li>&#1050;&#1072;&#1090;&#1086; &#1085;&#1072;&#1090;&#1080;&#1089;&#1085;&#1077;&#1084; &#1076;&#1077;&#1089;&#1085;&#1080;&#1103; &#1073;&#1091;&#1090;&#1086;&#1085; &#1085;&#1072; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072; &#1074; &#1087;&#1088;&#1072;&#1079;&#1085;&#1086; &#1084;&#1103;&#1089;&#1090;&#1086; &#1074; 3D &#1087;&#1088;&#1086;&#1079;&#1086;&#1088;&#1077;&#1094;&#1072; &#1080; &#1080;&#1079;&#1073;&#1077;&#1088;&#1077;&#1084; <i>Navigation style</i> &#1086;&#1090; &#1082;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086;&#1090;&#1086; &#1084;&#1077;&#1085;&#1102; &#1082;&#1086;&#1077;&#1090;&#1086; &#1089;&#1077; &#1087;&#1086;&#1103;&#1074;&#1103;&#1074;&#1072;.</li></ul>
@@ -1229,12 +1228,12 @@ In <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112171134
+Cached time: 20260112171213
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.336 seconds
-Real time usage: 0.494 seconds
+CPU time usage: 0.339 seconds
+Real time usage: 0.457 seconds
 Preprocessor visited node count: 1457/1000000
 Post&#8208;expand include size: 80408/2097152 bytes
 Template argument size: 19462/2097152 bytes
@@ -1245,19 +1244,19 @@ Unstrip post&#8208;expand size: 3861/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   66.243      1 -total
- 19.59%   12.975      8 Template:ASCII
-  8.85%    5.864      1 Template:Userdocnavi/bg
-  5.93%    3.928     77 Template:KEY
-  4.83%    3.197      1 Template:SolidWorks_Navigation
-  4.53%    3.002      1 Template:OpenSCAD_Navigation
-  4.43%    2.932      1 Template:CAD_Navigation/bg
-  4.34%    2.877      1 Template:Blender_Navigation/bg
-  4.32%    2.863      1 Template:Navigation_menu_2
-  4.03%    2.667      1 Template:Touchpad_Navigation/bg
+100.00%   70.086      1 -total
+ 11.95%    8.379      8 Template:ASCII
+  8.68%    6.081      1 Template:Userdocnavi/bg
+  6.16%    4.316      1 Template:OpenSCAD_Navigation
+  5.39%    3.778     77 Template:KEY
+  4.98%    3.488      1 Template:CAD_Navigation
+  4.91%    3.443      1 Template:OpenCascade_Navigation
+  4.78%    3.353      1 Template:SolidWorks_Navigation
+  4.74%    3.322      1 Template:CAD_Navigation/bg
+  4.67%    3.273      1 Template:Touchpad_Navigation/bg
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77587-0!canonical and timestamp 20260112171134 and revision id 1737576. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77587-0!canonical and timestamp 20260112171212 and revision id 1737578. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
