--- a/wiki/bg/Mouse_navigation.html
+++ b/wiki/bg/Mouse_navigation.html
@@ -36,10 +36,14 @@
 </p><p><span id="Selecting_a_navigation_style"></span>
 </p>
 <h2><span id=".D0.98.D0.B7.D0.B1.D0.B8.D1.80.D0.B0.D0.BD.D0.B5_.D0.BD.D0.B0_.D1.81.D1.82.D0.B8.D0.BB_.D0.B7.D0.B0_.D0.BD.D0.B0.D0.B2.D0.B8.D0.B3.D0.B0.D1.86.D0.B8.D1.8F"></span><span class="mw-headline" id="&#1048;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;_&#1085;&#1072;_&#1089;&#1090;&#1080;&#1083;_&#1079;&#1072;_&#1085;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103;">&#1048;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1089;&#1090;&#1080;&#1083; &#1079;&#1072; &#1085;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103;</span></h2>
-<div class="mw-translate-fuzzy">
-<ul><li>&#1042; &#1084;&#1077;&#1085;&#1102;&#1090;&#1086; <a href="../bg/Preferences_Editor.html" title="Preferences Editor/bg">Preference Editor</a>, &#1089;&#1082;&#1077;&#1094;&#1080;&#1103;&#1090;&#1072; Display &#1080; &#1074; &#1090;&#1072;&#1073;&#1072;  <i>3D View</i>;</li>
-<li>&#1050;&#1072;&#1090;&#1086; &#1085;&#1072;&#1090;&#1080;&#1089;&#1085;&#1077;&#1084; &#1076;&#1077;&#1089;&#1085;&#1080;&#1103; &#1073;&#1091;&#1090;&#1086;&#1085; &#1085;&#1072; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072; &#1074; &#1087;&#1088;&#1072;&#1079;&#1085;&#1086; &#1084;&#1103;&#1089;&#1090;&#1086; &#1074; 3D &#1087;&#1088;&#1086;&#1079;&#1086;&#1088;&#1077;&#1094;&#1072; &#1080; &#1080;&#1079;&#1073;&#1077;&#1088;&#1077;&#1084; <i>Navigation style</i> &#1086;&#1090; &#1082;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086;&#1090;&#1086; &#1084;&#1077;&#1085;&#1102; &#1082;&#1086;&#1077;&#1090;&#1086; &#1089;&#1077; &#1087;&#1086;&#1103;&#1074;&#1103;&#1074;&#1072;.</li></ul>
-</div>
+<ol><li>&#1053;&#1072;&#1087;&#1088;&#1072;&#1074;&#1077;&#1090;&#1077; &#1077;&#1076;&#1085;&#1086; &#1086;&#1090; &#1089;&#1083;&#1077;&#1076;&#1085;&#1080;&#1090;&#1077; &#1085;&#1077;&#1097;&#1072;:
+<ul><li>Press the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=NavigationCAD_dark.svg&amp;filetimestamp=20220305200617&amp;.html" class="mw-file-description"><img src="../File/NavigationCAD_dark.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span></span> button in the <a href="../Status_bar.html" class="mw-redirect" title="Status bar">Status bar</a>.</li>
+<li>Right-click an empty area in the <a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a>, and select <b>Navigation styles</b> from the context menu.</li>
+<li>Use the <a href="../Preferences_Editor.html#Navigation" title="Preferences Editor">Preferences Editor</a>. In the menu select <b>Edit &rarr; Preferences</b> and then <b>Display &rarr; Navigation &rarr; 3D Navigation</b>.</li></ul></li>
+<li>Select a style from the list.</li>
+<li>Optionally change the <b>Orbit style</b>: press the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=NavigationCAD_dark.svg&amp;filetimestamp=20220305200617&amp;.html" class="mw-file-description"><img src="../File/NavigationCAD_dark.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span></span> button in the <a href="../Status_bar.html" class="mw-redirect" title="Status bar">Status bar</a> and then choose <b>Settings &rarr; Orbit style</b>. See <a href="../Preferences_Editor.html#Navigation" title="Preferences Editor">Preferences Editor</a>.</li>
+<li>Optionally change the <b>Rotation mode</b>. See <a href="../Preferences_Editor.html#Navigation" title="Preferences Editor">Preferences Editor</a>.</li>
+<li>If the <b>CAD</b> navigation style is selected: optionally change the <b>Enable animation</b> setting. See <a href="../Preferences_Editor.html#Navigation" title="Preferences Editor">Preferences Editor</a>.</li></ol>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Available_navigation_styles">Available navigation styles</span></h2>
 </div>
@@ -1228,15 +1232,15 @@ In <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112171213
+Cached time: 20260112171321
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.339 seconds
-Real time usage: 0.457 seconds
-Preprocessor visited node count: 1457/1000000
-Post&#8208;expand include size: 80408/2097152 bytes
-Template argument size: 19462/2097152 bytes
+CPU time usage: 0.322 seconds
+Real time usage: 0.460 seconds
+Preprocessor visited node count: 1524/1000000
+Post&#8208;expand include size: 81330/2097152 bytes
+Template argument size: 19678/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1244,19 +1248,19 @@ Unstrip post&#8208;expand size: 3861/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   70.086      1 -total
- 11.95%    8.379      8 Template:ASCII
-  8.68%    6.081      1 Template:Userdocnavi/bg
-  6.16%    4.316      1 Template:OpenSCAD_Navigation
-  5.39%    3.778     77 Template:KEY
-  4.98%    3.488      1 Template:CAD_Navigation
-  4.91%    3.443      1 Template:OpenCascade_Navigation
-  4.78%    3.353      1 Template:SolidWorks_Navigation
-  4.74%    3.322      1 Template:CAD_Navigation/bg
-  4.67%    3.273      1 Template:Touchpad_Navigation/bg
+100.00%  111.406      1 -total
+ 12.11%   13.496      1 Template:CAD_Navigation/bg
+ 11.40%   12.699      1 Template:OpenCascade_Navigation
+ 10.72%   11.942      8 Template:ASCII
+  9.94%   11.074      1 Template:TinkerCAD_Navigation
+  7.43%    8.281      1 Template:Userdocnavi/bg
+  6.84%    7.623      1 Template:Blender_Navigation/bg
+  4.04%    4.498     77 Template:KEY
+  3.71%    4.138      1 Template:Revit_Navigation
+  3.43%    3.822      1 Template:CAD_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77587-0!canonical and timestamp 20260112171212 and revision id 1737578. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77587-0!canonical and timestamp 20260112171320 and revision id 1737580. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
