--- a/wiki/bg/Online_Help_Toc.html
+++ b/wiki/bg/Online_Help_Toc.html
@@ -35,9 +35,9 @@
 <li><a href="../bg/Installing_on_Linux.html" title="Installing on Linux/bg">&#1048;&#1085;&#1089;&#1090;&#1072;&#1083;&#1080;&#1088;&#1072;&#1085;&#1077; &#1074; Linux</a></li>
 <li><a href="../bg/Installing_on_Mac.html" title="Installing on Mac/bg">&#1048;&#1085;&#1089;&#1090;&#1072;&#1083;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; Mac</a></li>
 <li><a href="../bg/Installing_additional_components.html" title="Installing additional components/bg">&#1048;&#1085;&#1089;&#1090;&#1072;&#1083;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1076;&#1086;&#1087;&#1098;&#1083;&#1085;&#1080;&#1090;&#1077;&#1083;&#1085;&#1080; &#1082;&#1086;&#1084;&#1087;&#1086;&#1085;&#1077;&#1085;&#1090;&#1080;</a></li></ul></li></ul>
-<ul><li>Working with FreeCAD
-<ul><li><a href="../Getting_started.html" title="Getting started">Getting started</a></li>
-<li><a href="../Mouse_navigation.html" title="Mouse navigation">Mouse navigation</a></li>
+<ul><li>&#1056;&#1072;&#1073;&#1086;&#1090;&#1072; &#1089; FreeCAD
+<ul><li><a href="../bg/Getting_started.html" title="Getting started/bg">&#1055;&#1098;&#1088;&#1074;&#1080; &#1089;&#1090;&#1098;&#1087;&#1082;&#1080;</a></li>
+<li><a href="../bg/Mouse_navigation.html" title="Mouse navigation/bg">&#1085;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1089; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072;</a></li>
 <li><a href="../Selection_methods.html" title="Selection methods">Selection methods</a></li>
 <li><a href="../Navigation_Cube.html" title="Navigation Cube">The navigation cube</a></li>
 <li><a href="../Document_structure.html" title="Document structure">The FreeCAD document</a></li>
@@ -135,12 +135,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112170304
+Cached time: 20260112171412
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.112 seconds
-Real time usage: 0.258 seconds
+CPU time usage: 0.107 seconds
+Real time usage: 0.161 seconds
 Preprocessor visited node count: 94/1000000
 Post&#8208;expand include size: 5936/2097152 bytes
 Template argument size: 1925/2097152 bytes
@@ -151,14 +151,14 @@ Unstrip post&#8208;expand size: 4519/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.773      1 -total
- 45.03%    9.355      1 Template:Userdocnavi/bg
- 39.36%    8.176      2 Template:Version
- 13.69%    2.843      2 Template:VersionMinus
- 11.17%    2.321      1 Template:Navigation_menu_2
+100.00%    8.955      1 -total
+ 66.16%    5.925      1 Template:Userdocnavi/bg
+ 34.66%    3.104      1 Template:Navigation_menu_2
+ 16.56%    1.483      2 Template:Version
+ 13.10%    1.173      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77173-0!canonical and timestamp 20260112170304 and revision id 1737563. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77173-0!canonical and timestamp 20260112171411 and revision id 1737582. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
