--- a/wiki/bg/Property_View.html
+++ b/wiki/bg/Property_View.html
@@ -1,18 +1,18 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Property View/bg</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="bg" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Property+View&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../id/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="Property editor (0% translated)" lang="id" dir="ltr">Bahasa Indonesia</a></li>
-<li><a href="../de/Property_View.html" class="mw-pt-progress mw-pt-progress--high" title="Eigenschaften-Ansicht (98% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Property_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Eigenschaften-Ansicht (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Property_View.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Property View (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../tr/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="&Ouml;zellikler Penceresi (0% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="../es/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="Editor de Propiedades (4% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="../fr/Property_View.html" class="mw-pt-progress mw-pt-progress--high" title="&Eacute;diteur de propri&eacute;t&eacute;s (98% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Property_View.html" class="mw-pt-progress mw-pt-progress--complete" title="&Eacute;diteur de propri&eacute;t&eacute;s (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="Ure&#273;iva&#269; osobina (0% translated)" lang="hr" dir="ltr">hrvatski</a></li>
 <li><a href="../it/Property_View.html" class="mw-pt-progress mw-pt-progress--high" title="Editor delle Propriet&agrave; (78% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Property_View.html" class="mw-pt-progress mw-pt-progress--high" title="Edytor w&#322;a&#347;ciwo&#347;ci (96% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Property_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Edytor w&#322;a&#347;ciwo&#347;ci (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="Property editor (0% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="Editor de propriedades (12% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="Editor de propriet&#259;&#539;i (0% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../sv/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="Property editor (0% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><a href="../cs/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="Editor vlastnost&iacute; (0% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
+<li><a href="../cs/Property_View.html" class="mw-pt-progress mw-pt-progress--med" title="Zobrazen&iacute; vlastnost&iacute; (46% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="&#1056;&#1077;&#1076;&#1072;&#1082;&#1090;&#1086;&#1088; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074; (12% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="Property editor (0% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
@@ -213,35 +213,35 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251201224449
+Cached time: 20260112171758
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.137 seconds
-Real time usage: 0.173 seconds
+CPU time usage: 0.132 seconds
+Real time usage: 0.187 seconds
 Preprocessor visited node count: 709/1000000
 Post&#8208;expand include size: 33491/2097152 bytes
 Template argument size: 12486/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3946/5000000 bytes
+Unstrip post&#8208;expand size: 3966/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   48.219      1 -total
- 16.03%    7.729      3 Template:Navigation_menu_2
- 15.65%    7.544      1 Template:Std_Base_navi/bg
- 13.90%    6.703      1 Template:Property/bg
- 11.88%    5.727      1 Template:Userdocnavi/bg
-  9.93%    4.788      1 Template:Interface_navi/bg
-  6.21%    2.995      1 Template:PropertyData
-  5.50%    2.652      1 Template:Code
-  5.45%    2.630      2 Template:Docnav
-  4.83%    2.329      1 Template:Caption
+100.00%   57.377      1 -total
+ 17.75%   10.182      1 Template:Std_Base_navi/bg
+ 14.30%    8.207      3 Template:Navigation_menu_2
+ 13.67%    7.843      1 Template:Interface_navi/bg
+  8.09%    4.640      1 Template:Userdocnavi/bg
+  7.75%    4.444      1 Template:PropertyData
+  6.97%    4.000      1 Template:Property/bg
+  5.93%    3.405      2 Template:Docnav
+  5.55%    3.185     26 Template:MenuCommand
+  4.72%    2.711      6 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20251201224448 and revision id 1708583. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260112171758 and revision id 1708583. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
